deploy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service      
  namespace: default
spec:
  type: ClusterIP                   
  selector:
    app: aivle22-backend             
  ports:
  - port: 80                      
    targetPort: 8080
